tests/frontend/fail/array/out_of_bounds_case.act
contract B

constructor
interface constructor()

creates

  int[2] a := [1,2]

transition f
interface f()

case a[-1] < 0:

returns 1
